# beavr-bot

./: .gitignore  .gitmodules  .pre-commit-config.yaml  =1.11.1  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PERFORMANCE_OPTIMIZATION_GUIDE.md  README.md  SECURITY.md  codemap_teleop.txt  data_collect.py  deploy_server.py  env_isaac.yml  environment.yml  fish_eye_camera.py  launch_server.sh  pyproject.toml  rag.sh  requirements.txt  robot_camera.py  setup.py  teleop.py  test_ik.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  fast_tests.yml  full_tests.yml
assets/urdf/: ball_tennis.urdf  bowl_hole.urdf  tennis_ball.urdf
assets/urdf/leap_hand/: leap_hand_right.urdf
assets/urdf/leap_xarm7/: leap_xarm7.urdf
assets/urdf/objects/: arena_round.urdf  cube_multicolor_allegro.urdf  cube_multicolor_allegro_sdf.urdf
assets/urdf/schunk_hand/: schunk_svh_hand_left.urdf  schunk_svh_hand_left_glb.urdf  schunk_svh_hand_right.urdf  schunk_svh_hand_right_glb.urdf
assets/urdf/shadow_hand/: LICENSE  README.md  bimanual.urdf
assets/urdf/xarm7/: xarm7.urdf
assets/wrench/: foam_wrench.urdf  foam_wrench_mount.urdf  wrench.urdf
beavr/src/beavr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
beavr/src/components/: initializers.py
beavr/src/robot/: bimanual.py  bimanual_left.py  kinova.py  leap_robot.py  rx1_right.py  rx1_right_robot.py  xarm7_right.py
beavr/src/ros_links/: bimanual.py  xarm7_right.py
beavr/src/samplers/: allegro.py  sampler.py
beavr/src/utils/: files.py
calibration_files/: vr_thumb_bounds.npy  vr_thumb_plot_bounds.npy
configs/: collect_data.yaml  network.yaml  teleop.yaml
configs/robot/: allegro.yaml  bimanual_xarm.yaml  leap.yaml  leap_pybullet.yaml  leap_pybullet_xarm_right.yaml  leap_sim.yaml  leap_sim_isaac.yaml  leap_xarm_right.yaml  lerobot_xarm_adapter.yaml  moving_allegro_sim.yaml  rx1_right.yaml  template_robot.yaml  xarm7_left.yaml  xarm7_right.yaml  xarm_pybullet_sim.yaml  xela_hand.yaml
debugging_rx1_sim/: debug_ros.py  test_ik_send.py  test_send_ee.py
docker/: Dockerfile.internal
docker/IKFAST_GEN/: docker_exec.sh  docker_run.sh
docker/RX1_VR_DEV/: 10_nvidia.json  docker_build_no_usb.sh  docker_build_usb.sh  docker_exec_usb.sh  docker_run_no_usb.sh  docker_run_usb.sh  nvidia_icd.json
docker/ik_fast_gen/: Dockerfile  docker_build.sh
docker/rx1_vr_dev/: Dockerfile  docker_exec_no_usb.sh
docs/: README.md  contributions.md  handshake_coordinator_integration.md  policy_learning.md  simulation.md  vr.md  workflow.md
docs/lerobot/: dataset.md  index.md  policy.md
docs/teleop/: control.md  index.md  interface.md  networking.md  operators.md  overview.md
docs/tutorials/: apply_retargeted.md
logs/: action_pose_visualizer.py  cam_server.txt  camera_log.txt  ik_leap_hand_output_20250226_125205.json  leap_hand_pybullet_log_20250613_150230.json.tmp  pose_visualizer.py  robot_motion_analyzer.py  test_xarm_ik_log.py  visualize_ik_pybullet2.py
logs/leap_hand/: leap_hand_visualizer.py  send_ik_to_hand.py  visualize_ik_matplotlib.py  visualize_ik_pybullet.py  visualize_ik_pybullet_2.py  visualize_joints_pybullet.py
logs/leap_hand/urdf/: leap_right.urdf
open_teach.egg-info/: PKG-INFO  SOURCES.txt
openteach/: constants.py
openteach/components/: initializers.py
openteach/components/detector/: keypoint_transform.py
openteach/components/environment/: leap_hand_env.py  leap_hand_isaac.py  pybullet_base_env.py  pybullet_base_env_hand.py  rx1_env.py  xarm_env.py
openteach/components/operators/: bimanual_right.py  leap.py  leap_pybullet.py  leap_sim.py  rx1_right_operator.py  xarm7_right.py  xarm_pybullet_bimanual_sim.py  xarm_pybullet_sim.py
openteach/robot/: leap_robot.py  rx1_right.py  rx1_right_robot.py  xarm7_right.py
openteach/ros_links/: bimanual.py  leap_control.py  rx1_right.py  xarm7_right.py
openteach/utils/: logger.py
server/: application_manager.py  camera_viewer.py  monitor.py
src/beavr/: constants.py
src/beavr/common/: messages.py
src/beavr/components/: initializers.py
src/beavr/configs/: default.py  eval.py  parser.py  policies.py  train.py
src/beavr/configs_teleop/: bimanual_xarm_config.py  constants.py  constants.yaml  leap_pybullet_config.py  leap_sim_config.py  leap_sim_isaac_config.py  leap_xarm_right_config.py  rx1_right_config.py  shared_components.py  template_robot_config.py  xarm7_left_config.py  xarm7_right_config.py  xarm_pybullet_sim_config.py
src/beavr/controllers/: controller.py  leap_control.py  xarm7_control.py
src/beavr/interfaces/: leap_robot.py  rx1_right_robot.py  xarm7_robot.py
src/beavr/robot/: bimanual.py  bimanual_left.py  kinova.py  leap_robot.py  rx1_right.py  rx1_right_robot.py  xarm7_right.py
src/beavr/ros_links/: bimanual.py  xarm7_right.py
src/beavr/samplers/: allegro.py  sampler.py
src/beavr/scripts/: check_cameras.sh  control_robot.py  xarm7_right_eval.sh  xarm7_right_record.sh
src/beavr/teleop/: __init__.py  constants.py  main.py
src/beavr/utils/: files.py  network.py  ops.py  registry.py  torch_utils.py
tests/: conftest.py  test_gazebo.py  test_leap_hand_joint_limits.py  test_leap_hand_pybullet.py  test_real_robot_control.py  test_xarm7_link_getters.py  test_xarm_ik.py  test_xarm_joints_setup.py  test_xarm_pybullet.py  test_xarm_rotation_transform.py  test_xarm_transformed_poses.py
tests/cameras/: mock_cv2.py
tests/components/detector/: test_keypoint_transform.py  test_kptransform.py  test_occulus.py  test_oculus_pub.py  test_vr_detector.py
tests/components/environment/: test_leap_hand_pybullet.py  test_xarm_pybullet.py
tests/components/interface/: test_interface.py
tests/components/operator/: test_operator.py  test_rx1_operator.py
tests/debugging/rx1_sim/: debug_ros.py  (+4 more)
tests/robot/: test_cartesian_control.py  test_leap_hand_joint_limits.py  test_real_robot_control.py  test_xarm7_link_getters.py  test_xarm_ik.py  test_xarm_joints_setup.py
tests/scripts/: actions.json  actions_test3.json  extract_actions.py  test_handshake_coordinator.py  test_record_script.py  test_robot_motion.py  test_shutdown_fix.py
(+630 files in other folders)
