[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "beavr"
version = "1.0.0"
description = "BeaVR-Bot: Bimanual, multi-Embodiment, Accessible, Virtual Reality Teleoperation System for Robots"
requires-python = ">=3.10.13"
dependencies = [
    # Core dependencies
    "blosc==1.11.1",
    "contourpy==1.2.0",
    "cycler==0.12.1",
    "fonttools==4.45.1",
    "Flask",
    "gevent",
    "gunicorn",
    "h5py==3.10.0",
    "hydra-core==1.3.2",
    "kiwisolver==1.4.5",
    "matplotlib==3.8.2",
    "numpy==1.26.2",
    "omegaconf==2.3.0",
    "opencv-python==4.8.1.78",
    "packaging==23.2",
    "pandas==2.1.3",
    "pillow==10.1.0",
    "pybullet==3.2.6",
    "pyparsing==3.1.1",
    "pyrealsense2==2.54.2.5684",
    "python-dateutil==2.8.2",
    "pytz==2023.3.post1",
    "pyyaml==6.0.1",
    "pyzmq==25.1.1",
    "scipy==1.15.2",
    "six==1.16.0",
    "tqdm>=4.67.1",
    "tzdata==2023.3",
    "zmq==0.0.0",
    "ikpy",
    "shapely",
    "rospkg",
    "IPython",
    "xarm-python-sdk",
    "dynamixel-sdk",
    "pybullet",
    "hydra-core",
    "draccus",
    "datasets",
    "jsonlines",
    "av",
    "einops",
    "diffusers",
    "transformers",
    "imageio",
    "torch>=2.7.1",
    "gymnasium",
    "deepdiff",
    "termcolor",
    "rerun",
    "pynput"
]

# Note: PyTorch and torchvision are not included here as they're typically
# installed via conda or special instructions

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-data]
beavr = [
    "components/environment/assets/**/*", 
    "components/environment/configs/*",
    "robot/assets/*", 
    "robot/configs/*",
    "robot/allegro/configs/*.yaml",
    "components/operators/configs/*.yaml"
]

[project.urls]
# Add any relevant URLs here
# "Homepage" = "https://github.com/yourusername/beavr"
# "Bug Tracker" = "https://github.com/yourusername/beavr/issues"

[tool.poetry]
name = "beavr"
version = "1.0.0"
description = "BeaVR-Bot: Bimanual, multi-Embodiment, Accessible, Virtual Reality Teleoperation System for Robots"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
# Source layout: code lives in src/beavr
packages = [{ include = "beavr", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10.13,<3.13"
blosc = "1.11.1"
contourpy = "1.2.0"
cycler = "0.12.1"
fonttools = "4.45.1"
flask = "*"
gevent = "*"
gunicorn = "*"
h5py = "3.10.0"
hydra-core = "1.3.2"
kiwisolver = "1.4.5"
matplotlib = "3.8.2"
numpy = "1.26.2"
omegaconf = "2.3.0"
opencv-python = "4.8.1.78"
packaging = "23.2"
pandas = "2.1.3"
pillow = "10.1.0"
pybullet = "3.2.6"
pyparsing = "3.1.1"
pyrealsense2 = "2.54.2.5684"
python-dateutil = "2.8.2"
pytz = "2023.3.post1"
pyyaml = "6.0.1"
pyzmq = "25.1.1"
scipy = "1.15.2"
six = "1.16.0"
tqdm = ">=4.67.1"
tzdata = "2023.3"
zmq = "0.0.0"
ikpy = "*"
shapely = "*"
rospkg = "*"
ipython = "*"
xarm-python-sdk = "*"
dynamixel-sdk = "*"
draccus = "*"
datasets = "*"
jsonlines = "*"
av = "*"
einops = "*"
diffusers = "*"
transformers = "*"
imageio = "*"
torch = ">=2.7.1"
gymnasium = "*"
deepdiff = "*"
termcolor = "*"
rerun = "*"
pynput = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
isort = "*"