[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beavr"
version = "1.0.0"
description = "BeaVR-Bot: Bimanual, multi-Embodiment, Accessible, Virtual Reality Teleoperation System for Robots"
authors = [
    { name = "BeaVR Team", email = "team@beavr.ai" },
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["robotics", "deep learning", "pytorch", "teleoperation", "vr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    # Core LeRobot compatible dependencies
    "datasets>=2.19.0,<=3.6.0",
    "huggingface-hub[hf-transfer,cli]>=0.27.1",
    "draccus==0.10.0",
    "einops>=0.8.0",
    "deepdiff>=7.0.1",
    "diffusers>=0.27.2",
    "imageio[ffmpeg]>=2.34.0",
    "jsonlines>=4.0.0",
    "numba>=0.59.0",
    "omegaconf>=2.3.0",
    "av>=14.2.0",
    "termcolor>=2.4.0",
    "wandb>=0.16.3",
    "zarr>=2.17.0",
    
    # Core BeaVR dependencies
    "flask>=3.0.3",
    "gevent",
    "gunicorn",
    "h5py>=3.10.0",
    "hydra-core>=1.3.2",
    "matplotlib>=3.8.2",
    "opencv-python>=4.9.0",
    "packaging>=24.2",
    "pandas>=2.1.3",
    "pillow>=10.1.0",
    "pybullet>=3.2.6",
    "pyrealsense2>=2.54.2.5684",
    "pyzmq>=26.2.1",
    "pyyaml>=6.0.1",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
    "pynput>=1.7.7",
    "pyserial>=3.5",
    "rerun-sdk>=0.21.0",
    "gdown>=5.1.0",
    "gymnasium==0.29.1",
    "pymunk>=6.6.0,<7.0.0",
    
    # Robot-specific dependencies
    "ikpy",
    "shapely",
    "rospkg",
    "xarm-python-sdk",
    "dynamixel-sdk",
    "transformers",
    
    # Note: PyTorch packages (torch, torchvision, torchaudio) should be 
    # installed via conda with CUDA support, not pip
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-timeout>=2.4.0", 
    "pytest-cov>=5.0.0",
    "black",
    "isort",
    "pre-commit>=3.7.0",
]

[project.urls]
homepage = "https://github.com/arc-beavr/beavr-bot"
issues = "https://github.com/arc-beavr/beavr-bot/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["beavr*"]

[tool.setuptools.package-data]
beavr = [
    "components/environment/assets/**/*", 
    "components/environment/configs/*",
    "robot/assets/*", 
    "robot/configs/*",
    "robot/allegro/configs/*.yaml",
    "components/operators/configs/*.yaml"
]

[tool.ruff]
line-length = 110
target-version = "py310"
exclude = ["tests/artifacts/**/*.safetensors", "*_pb2.py", "*_pb2_grpc.py"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]